# wazuhevtx

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
src/: evtparser.py  evtx2json.py  main.py  wazuh-evtx.py  winapi.py
wazuhevtx/: events2json.py  evtx2json.py  wazuhevtx.py
